# toptrumps

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/cards/: models.rs
backend/src/game/: host_game.rs  mod.rs  models.rs
backend/src/stand_users/: mod.rs
backend/src/stands/: mod.rs  stand.rs
backend/src/usecases/: compare_two_cards_usecase.rs  mod.rs  shuffle_deck_usecase.rs
